# vgi-easter-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  fly.toml
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
src/: easter.rs  main.rs
test/sql/: easter_catalog.test  easter_function.test
