[package]
name = "vgi-easter"
version = "1.0.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
homepage = "https://query.farm"
repository = "https://github.com/Query-farm/vgi-easter-rust"
description = "VGI worker computing the date of Western (Gregorian) Easter Sunday (Rust port)"

[[bin]]
name = "vgi-easter"
path = "src/main.rs"

[dependencies]
# Pinned to the vgi-rust commit that gates the AF_UNIX transport behind
# `#[cfg(unix)]` so the crate compiles on Windows. crates.io 0.1.0/0.1.1 do
# not build on windows-msvc/gnu. Switch back to `vgi = "0.1.2"` once that
# version is published to crates.io.
vgi = { git = "https://github.com/Query-farm/vgi-rust", rev = "94fcefd" }
vgi-rpc = { version = "0.2.0", default-features = false, features = ["macros", "http"] }
arrow = { version = "58", default-features = false, features = ["ipc"] }
arrow-array = "58"
arrow-schema = "58"
arrow-cast = "58"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 2
